# OpenBaD

./: .gitattributes  .gitignore  01-environment-nervous-system.md  02-sensory-integration.md  03-cognitive-engine-immune-system.md  04-memory-hierarchies-sleep.md  05-active-inference-endocrine.md  09-heartbeat-research-task.md  10-OpenBaD Built-In Capabilities Spec.md  11-OpenBaD Library System Upgrade Spec.md  12-OpenBaD Peripheral Transducers & Systemd.md  13-Temporal Architecture Specification.md  14-Agent Autonomy and Control Features.md  Makefile  README.md  overview-spec.md  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: .gitkeep  active_inference.yaml  broker.conf  cognitive.yaml  endocrine.yaml  fsm.yaml  identity.yaml  immune.yaml  immune_rules.yaml  memory.yaml  model_routing.yaml  openbad-broker.service  openbad-corsair.service  openbad-heartbeat-apply.service  openbad-heartbeat-watch.path  openbad-heartbeat.service  openbad-heartbeat.timer  openbad-searxng.service  openbad-telemetry-apply.service  openbad-telemetry-watch.path  openbad-wui.service  openbad.service  peripherals.yaml  permissions.yaml  senses.yaml  sensory_audio.yaml  sensory_vision.yaml  threshold_policies.yaml
data/memory/: episodic.json  procedural.json  semantic.json
docs/adr/: 001-mqtt-broker.md
quarantine/: test_mcp_runner.py
quarantine/mcp_bridge/: __init__.py
quarantine/providers/: github_copilot.py  openai_compat.py
scripts/: bump_patch_version.py  install.sh  openbad-apply-heartbeat-interval  openbad-apply-telemetry-interval  pack-release.sh
src/openbad/: __init__.py  cli.py  daemon.py  setup.py  updater.py  usage_recorder.py
tests/: conftest.py  test_access_control.py  test_accessibility.py  test_adrenaline_hooks.py  test_agents.py  test_anomaly_detector.py  test_anthropic_provider.py  test_ask_user.py  test_asr_vosk.py  test_asr_whisper.py  test_assistant_profile.py  test_attention_filter.py  test_audio_capture.py  test_audio_capture_integration.py  test_audio_config.py  test_auto_equip.py  test_autonomic_ingress.py  test_background_scanner.py  test_broker_config.py  test_browser_context.py  test_browser_plugin.py  test_budget.py  test_cabinet_belt.py  test_calendar_plugin.py  test_capability_manifest.py  test_capability_registry.py  test_cdp_dom.py  test_cgroup.py  test_chain_of_thought.py  test_chat_activator.py  test_chat_panel.py  test_chat_pipeline.py  test_chat_workflow.py  test_cli.py  test_cli_tool.py  test_client.py  test_cognitive_event_loop.py  test_cognitive_maintenance.py  test_cognitive_memory_schema.py  test_cognitive_scaffold.py  (+196 more)
tests/integration/: test_phase1_pipeline.py  test_phase2_sensory.py
wui-svelte/: .gitignore  package-lock.json  package.json  vite.config.ts
wui-svelte/src/: app.css  (+1 more)
(+384 files in other folders)
