[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbad"
version = "0.1.0"
description = "OpenBaD — Biological as Digital agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bruce Amoser" },
]
dependencies = [
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "grpcio-tools>=1.60",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openbad"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]
exclude = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end integration tests (deselect with '-m \"not integration\"')",
]
